--- a/package.json
+++ b/package.json
@@ -2,7 +2,5 @@
   "name": "mhds-project",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "googleapis": "^128.0.0"
-  }
+  "type": "module"
 }
