--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mhds-project",
+  "name": "mhds-final",
   "version": "1.0.0",
-  "private": true,
-  "type": "module"
+  "type": "module",
+  "private": true
 }
